added style.css and updated link to it

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <link href="http://meyerweb.com/eric/tools/css/reset/reset.css" rel="stylesheet">
  
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="/style.css">
       <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
    </head>
    <body>
