--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <body>
       <div class="header">
          <h1>Annukka Törmälä</h1>
-         <img src="akka.png" class="image">
+         <img src="woman.png" class="image">
       </div>
       
       <div class="leftbar">
