--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
    </head>
    <body>
-      <div class="header">
+      <header>
          <h1>Annukka Törmälä</h1>
          <img src="/woman.png" class="image">
-      </div>
+      </header>
       
       <div class="leftbar">
          <b>Tietoa minusta</b>
