edited image name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <body>
       <header>
          <h1>Annukka Törmälä</h1>
-         <img src="/woman.png" class="image">
+         <img src="/woman.PNG" class="image">
       </header>
       
       <div class="leftbar">
