--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
    <head>
       <title>Kotisivut</title>
       <meta charset="utf-8">
-      <link href="http://meyerweb.com/eric/tools/css/reset/reset.css" rel="stylesheet">
-      <link rel="stylesheet" href="/style.css">
+       <link href="http://meyerweb.com/eric/tools/css/reset/reset.css" rel="\stylesheet">
+      <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
    </head>
    <body>
@@ -18,7 +18,7 @@
          <p>asdpoka hfduh apojd asdsa oiasdnasodo asdasoj posdfkdsp oisdjfoids psodkfpdsk oishdfoids oisjdofijds oisjdofjds oisjdfoisdjf oisjdfosdf</p>
          <img src="email.png" class="barimage"/>
          <p>tormala.annukka@gmail.com</p>
-         <img src="/location.png" class="barimage">
+         <img src="location.png" class="barimage">
          <p>Oulu</p>
       </div>
       
