added mobile responsivity

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <title>Kotisivut</title>
       <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet"  href="reset.css">
       <link rel="stylesheet" href="style.css">
       <link href="https://fonts.googleapis.com/css?family=Fira+Sans+Extra+Condensed" rel="stylesheet">
@@ -14,7 +15,7 @@
       </header>
       
       <div class="leftbar">
-         <b>Tietoa minusta</b>
+         <h3>Tietoa minusta</h3>
          <p>asdpoka hfduh apojd asdsa oiasdnasodo asdasoj posdfkdsp oisdjfoids psodkfpdsk oishdfoids oisjdofijds oisjdofjds oisjdfoisdjf oisjdfosdf</p>
          <img src="email.png" class="barimage"/>
          <p>tormala.annukka@gmail.com</p>
@@ -52,7 +53,7 @@
       
       <div class="subheader">
          <img src="smiley.png" class="subimage">
-         <h2>Mielenkiinnonkohteet</h2>
+         <h2>Interests</h2>
          <ul>
             <li>asdasojdoia, oijasoj</li>
             <li>sdfsfs, sdfksdpk</li>
