changed language to english and added colums to unordered lists

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Kotisivut</title>
+    <title>Web page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  href="reset.css">
@@ -15,7 +15,7 @@
     </header>
     
     <div class="leftbar">
-      <h3>Tietoa minusta</h3>
+      <h3>About me</h3>
       <p>asdpoka hfduh apojd asdsa oiasdnasodo asdasoj posdfkdsp oisdjfoids psodkfpdsk oishdfoids oisjdofijds oisjdofjds oisjdfoisdjf oisjdfosdf</p>
       <img src="email.png" class="barimage"/>
       <p>tormala.annukka@gmail.com</p>
@@ -26,28 +26,29 @@
     <div class="subheader-container">
       <div class="subheader">
         <img src="book.png" class="subimage">
-        <h2>Koulutus</h2>
+        <h2>Education</h2>
         <ul>
-          <li>Lukio, fhfhfg</li>
-          <li>Yliopisto, ffhfg</li>
+          <li>University of Oulu, Information Processing Science, 2014- </li>
+          <li>Laanila Highschool, 2011 - 2014</li>
         </ul>
       </div>
 
       <div class="subheader">
         <img src="magic-wand.png" class="subimage">
-        <h2>Taidot</h2>
+        <h2>Skills</h2>
         <ul>
+          <li>fjfsfsd</li>
+          <li>fgjfgjfg</li>
           <li>fjfsfsd</li>
           <li>fgjfgjfg</li>
         </ul>
       </div>
       <div class="subheader">
         <img src="pen-point-tip.png" class="subimage">
-        <h2>Kielitaito</h2>
+        <h2>Languages</h2>
         <ul>
-          <li>suomi, aidinkieli</li>
-          <li>englanti, tyydyttava</li>
-          <li>ruotsi, pasdafd</li>
+          <li>Finnish, native</li>
+          <li>English, intermediate</li>
         </ul>
       </div>
       <div class="subheader">
