--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <body>
     <header>
       <h1>Annukka Törmälä</h1>
-      <img src="woman.PNG" class="image">
+
     </header>
     
     <div class="leftbar">
       <h3>About me</h3>
-      <p>asdpoka hfduh apojd asdsa oiasdnasodo asdasoj posdfkdsp oisdjfoids psodkfpdsk oishdfoids oisjdofijds oisjdofjds oisjdfoisdjf oisjdfosdf</p>
+      <p>I’m a third-year student studying Information Processing Science at the University of Oulu.  I’m motivated, willing to learn new skills and able to work independently and with a team. In addition I’m interested in web development, software testing and UI/UX  -design. </p>
       <img src="email.png" class="barimage"/>
       <p>tormala.annukka@gmail.com</p>
       <img src="location.png" class="barimage">
@@ -37,10 +37,9 @@
         <img src="magic-wand.png" class="subimage">
         <h2>Skills</h2>
         <ul>
-          <li>fjfsfsd</li>
-          <li>fgjfgjfg</li>
-          <li>fjfsfsd</li>
-          <li>fgjfgjfg</li>
+          <li>HTML/CSS</li>
+          <li>C/C++</li>
+          <li>Java</li>
         </ul>
       </div>
       <div class="subheader">
@@ -55,9 +54,9 @@
         <img src="smiley.png" class="subimage">
         <h2>Interests</h2>
         <ul>
-          <li>asdasojdoia, oijasoj</li>
-          <li>sdfsfs, sdfksdpk</li>
-          <li>asdakspoa</li>
+          <li>Web development</li>
+          <li>Software testing </li>
+          <li>UI/UX  -design</li>
         </ul>
       </div>
     </div>
